# QTBoilerplateCode

./: CMakeLists.txt  README.md  main.cpp
